# BenchmarkQC

./: README.md  pyproject.toml
FeS/: FeS-in.ipynb  FeS_PES_H.npz  FeS_pyscf.py  test_fes_hamiltonian.py
N2/: ham_pyscf.py  test_n2_hamiltonian.py
U2/: U2_ham1.py  test_u2_hamiltonian.py
benchmark_qc/: fes.py  n2.py
benchmark_qc.egg-info/: PKG-INFO  SOURCES.txt
docs/: API.md  NPZ_FORMAT.md  README.md  USAGE.md
